fix bug #48724

PDO's getColumnMeta() doesn't return native_type for BIT, TINYINT and YEAR